--- a/index.html
+++ b/index.html
@@ -1,9 +1,69 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Jesse Gaylord">
+  <link rel="stylesheet" href="styles.css">
+  <title>Jesse Gaylord Portfolio</title>
+</head>
 <body>
-  <h1>Hi Lauryn!!!</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <nav id="navbar">
+    <ul>
+      <li><a href="#welcome">About</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="contact">Contact</a></li>
+    </ul>
+  </nav>
+  <section id="welcome">
+    <h1>Hello I Am Jesse Gaylord</h1>
+    <p>Web Developer</p>
+  </section>
+  <h2 id="project-header">My Projects</h2>
+  <section id="projects">
+    <figure class="project">
+      <figcaption class="project-titles">Spartacus Tribute Page</figcaption>
+      <a href="https://www.yahoo.com/"><img src="./Spartacus.jpg"></a>
+    </figure>
+    <figure class="project">
+      <a href="">
+        <figcaption class="project-titles">Smart Home Survey</figcaption>
+        <img src="./SmartSurvey.png">
+      </a>
+    </figure>
+    <figure class="project">
+      <a href="">
+        <figcaption class="project-titles">Lauryn's Custom Creations</figcaption>
+        <img src="./LaurynsCustomCreations.png">
+      </a>
+    </figure>
+    <figure class="project">
+      <figcaption class="project-titles">HTML</figcaption>
+      <a href="https://www.yahoo.com/"><img src="./HTMLPAGE.png"></a>
+    </figure>
+    <figure class="project">
+      <a href="">
+        <figcaption class="project-titles">Smart Home Survey</figcaption>
+        <img src="./SmartSurvey.png">
+      </a>
+    </figure>
+    <figure class="project">
+      <a href="">
+        <figcaption class="project-titles">Lauryn's Custom Creations</figcaption>
+        <img src="./LaurynsCustomCreations.png">
+      </a>
+    </figure>
+  </section>
+  <section id="contact">
+    <h3>Contact</h3>
+    <ul>
+      <li><a href=""><img class="social-icons" src="./3225194_app_facebook_logo_media_popular_icon.png"></a></li>
+      <li><a href="https://www.linkedin.com/"><img class="social-icons" src="./104493_linkedin_icon.png"></a></li>
+      <li><a href=""><img class="social-icons"
+            src="./4975303_search_web_internet_google search_search engine_icon.png"></a></li>
+      <li><a href=""><img class="social-icons"
+            src="./5282546_chat_facebook_message_messenger_messenger logo_icon.png"></a></li>
+    </ul>
+  </section>
 </body>
-
 </html>
