--- a/index.html
+++ b/index.html
@@ -23,32 +23,32 @@
   <section id="projects">
     <figure class="project">
       <figcaption class="project-titles">Spartacus Tribute Page</figcaption>
-      <a href="https://www.yahoo.com/"><img src="./Spartacus.jpg"></a>
+      <a href="" target="_blank" rel="noopener noreferrer"><img src="./Spartacus.jpg"></a>
     </figure>
     <figure class="project">
-      <a href="">
+      <a href="" target="_blank" rel="noopener noreferrer">
         <figcaption class="project-titles">Smart Home Survey</figcaption>
         <img src="./SmartSurvey.png">
       </a>
     </figure>
     <figure class="project">
-      <a href="">
+      <a href="" target="_blank" rel="noopener noreferrer">
         <figcaption class="project-titles">Lauryn's Custom Creations</figcaption>
         <img src="./LaurynsCustomCreations.png">
       </a>
     </figure>
     <figure class="project">
       <figcaption class="project-titles">HTML</figcaption>
-      <a href="https://www.yahoo.com/"><img src="./HTMLPAGE.png"></a>
+      <a href="https://www.yahoo.com/" target="_blank" rel="noopener noreferrer"><img src="./HTMLPAGE.png"></a>
     </figure>
     <figure class="project">
-      <a href="">
+      <a href="" target="_blank" rel="noopener noreferrer">
         <figcaption class="project-titles">Smart Home Survey</figcaption>
         <img src="./SmartSurvey.png">
       </a>
     </figure>
     <figure class="project">
-      <a href="">
+      <a href="" target="_blank" rel="noopener noreferrer">
         <figcaption class="project-titles">Lauryn's Custom Creations</figcaption>
         <img src="./LaurynsCustomCreations.png">
       </a>
@@ -57,11 +57,10 @@
   <section id="contact">
     <h3>Contact</h3>
     <ul>
-      <li><a href=""><img class="social-icons" src="./3225194_app_facebook_logo_media_popular_icon.png"></a></li>
-      <li><a href="https://www.linkedin.com/"><img class="social-icons" src="./104493_linkedin_icon.png"></a></li>
-      <li><a href=""><img class="social-icons"
-            src="./4975303_search_web_internet_google search_search engine_icon.png"></a></li>
-      <li><a href=""><img class="social-icons"
+      <li><a href="" target="_blank" rel="noopener noreferrer"><img class="social-icons" src="./3225194_app_facebook_logo_media_popular_icon.png"></a></li>
+      <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><img class="social-icons" src="./104493_linkedin_icon.png"></a></li>
+      <li><a href="" target="_blank" rel="noopener noreferrer"><img class="social-icons" src="./4975303_search_web_internet_google search_search engine_icon.png"></a></li>
+      <li><a href="" target="_blank" rel="noopener noreferrer"><img class="social-icons"
             src="./5282546_chat_facebook_message_messenger_messenger logo_icon.png"></a></li>
     </ul>
   </section>
